# reap3r-2

./: .env.example  .gitignore  DEPLOY-DIRECT.bat  DEPLOY-FORCE.bat  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-FINAL.md  DEPLOYMENT.md  README-DEPLOY.txt  README.md  REMOTE_SHELL_DEBUG.md  bootstrap.sh  deploy-agents-test.ps1  deploy-auto.sh  deploy-github.ps1  deploy-now.bat  deploy-quick.bat  deploy-simple.ps1  deploy-ssh-setup.sh  deploy-vps.bat  deploy-vps.ps1  deploy-windows.ps1  deploy.bat  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  fix_nginx_cache.py  gen_hash.js  github-push.ps1  install-prod.sh  install.sh  package-lock.json  package.json  push-to-github.ps1  reset_pass.sql  run-deploy.bat  send_pass.ps1  setup-ssh.sh  show-deploy-options.ps1  (+2 more)
.github/workflows/: enterprise-ci.yml
.tmp/: deploy-agent-fixes-final.sh  deploy-agent-fixes.sh  deploy-final-clean.sh  deploy-fix.sh  deploy-fix2.sh  deploy-fix3.sh  test-nginx.sh  write-backend-env.js
agent/: Cargo.toml  Dockerfile.build  ENTERPRISE-DEPLOYMENT.md  RAPPORT_VERIFICATION_FINALE.md  README-DEPLOY.md  TESTS_FONCTIONNELS_COMPLETS.md  VERIFICATION_COMPLETE_FINALE.md  WINDOWS11_PC_GUIDE.md  build.ps1  build.rs  config.toml  debug_connection.ps1  deploy-zabbix-linux.sh  deploy-zabbix-windows.ps1  install-systemd.sh  install-windows-service.bat  install-windows-service.ps1  install-windows11.ps1  massvision.manifest  test_debug.sig  test_debug.txt  test_payload.sig  test_payload.txt  test_signer_cli.ps1
agent/.cargo/: config.toml
agent/installer/: install-windows.ps1  reap3r-agent.iss  windows-smoke-test.ps1
agent/scripts/: install-linux.sh  install-macos.sh  install-windows.ps1
agent/src/: agent.rs  main.rs  network.rs  platform.rs  policy.rs  protocol.rs  security.rs  storage.rs  update.rs
agent/src/modules/: inventory.rs  metrics.rs  mod.rs  remote_desktop.rs  remote_shell.rs  script_runner.rs  webcam.rs
backend/: Dockerfile  package.json  tsconfig.json
backend/src/: app.ts  config.ts  index.ts
backend/src/__tests__/: agent-ws.e2e.test.ts  agent.e2e.test.ts  e2e.test.ts
backend/src/db/: migrate.ts  pool.ts  run-migrations.ts
backend/src/db/migrations/: 001_initial.sql  002_add_capabilities_to_agents.sql  002_full_platform.sql  003_alerting.sql  004_vault_premium.sql  005_enterprise_hardening.sql  006_agent_enhancements.sql  007_jobs_status_fix.sql  008_add_priority_to_jobs.sql  009_zabbix_deploy.sql  010_deploy_batch_secrets.sql  011_deploy_items_dat_hex_check.sql  012_job_redispatch.sql  013_edr_v2.sql
backend/src/lib/: totp.ts  v2-run-script.ts  validate.ts
backend/src/plugins/: audit.ts  auth.ts  db.ts  metrics.ts
backend/src/routes/: admin.ts  agent-binary.ts  agents-v2.ts  agents.ts  alerting.ts  api-keys.ts  audit.ts  auth.ts  chat.ts  companies.ts  deploy.ts  edr.ts  enrollment.ts  folders.ts  health.ts  install.ts  jobs.ts  vault.ts
backend/src/scripts/: agent-sim.ts  check-zabbix.ts  reset-admin.ts  seed-test-token.ts
backend/src/services/: admin.service.ts  agent-update-manifest.service.ts  agent.service.ts  alerting.service.ts  apikey.service.ts  audit.service.ts  auth-session.service.ts  chat.service.ts  company.service.ts  deploy.service.ts  edr.service.ts  folder.service.ts  job-dispatch.service.ts  job.service.ts  notification.service.ts  vault.service.ts  zabbix-client.ts
backend/src/workers/: alert-engine.ts  deploy-worker.ts
backend/src/ws/: agent-gateway.ts
bootstrap/: Cargo.toml
bootstrap/src/: main.rs
docs/: AGENT_PROTOCOL_V2.md  CHANGELOG.md  ROADMAP.md  RUNBOOK_UBUNTU_24_04.md  RUNBOOK_ZABBIX_DEPLOY.md  agent-protocol.md  openapi.yaml
frontend/: Dockerfile  eslint.config.mjs  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/(main)/admin/: page.tsx
frontend/src/app/(main)/agents/: page.tsx
frontend/src/app/(main)/agents/[id]/: page.tsx
frontend/src/app/(main)/alerting/: page.tsx
frontend/src/app/(main)/alerting/rules/: page.tsx
frontend/src/app/(main)/audit/: page.tsx
frontend/src/app/(main)/chat/: page.tsx
frontend/src/app/(main)/companies/: page.tsx
frontend/src/app/(main)/dashboard/: page.tsx
frontend/src/app/(main)/deployment/: page.tsx
frontend/src/app/(main)/edr/: page.tsx
frontend/src/app/(main)/edr/incidents/[id]/: page.tsx
frontend/src/app/(main)/folders/: page.tsx
frontend/src/app/(main)/jobs/: page.tsx
frontend/src/app/(main)/messaging/: page.tsx
frontend/src/app/(main)/settings/: page.tsx
frontend/src/app/(main)/vault/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/deploy/: BrowserDeployTab.tsx  ZabbixBatchDeployTab.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/ui/: index.tsx
frontend/src/hooks/: useRealtimeData.ts  useWebSocket.ts
frontend/src/lib/: api.ts  auth-provider.tsx  auth.ts  export.ts  toast.tsx  utils.ts  ws.ts
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/dashboards/json/: reap3r-overview.json
infra/nginx/: massvision.nginx.conf  nginx.conf
infra/prometheus/: prometheus.yml
infra/scripts/: backup.sh  diag_rd.sh  fix_nginx_ws.sh  install_ubuntu_24_04.sh  restore.sh  stop_rd.sh  test_rd.sh  upgrade.sh
scripts/: Deploy-Reap3rAgent.ps1
shared/: package.json  tsconfig.tsbuildinfo
shared/src/: deploy-types.ts  index.ts  job-types.ts  protocol.ts  rbac.ts  schemas.ts
tools/: build_agent_bundle.ps1  gen_update_keys.py  sign_update.py  sign_windows_binary.ps1  zabbix-deploy.ts
tools/agent-sim/: index.ts
