[package]
name = "reap3r-agent"
version = "1.2.0"
edition = "2021"
description = "MASSVISION Reap3r Agent — Remote management agent (Windows 7 → Server 2025)"
license = "Proprietary"

[[bin]]
name = "reap3r-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
# ── TLS: use rustls (pure-Rust) instead of native-tls ──
# This eliminates the dependency on Windows SChannel / OpenSSL,
# ensuring TLS 1.2+ works even on Windows 7 SP1 without KB updates.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
tokio-rustls = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
sysinfo = "0.31"
hostname = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
futures-util = "0.3"
url = "2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
strip = true
# Panic=abort for smaller binary + deterministic behavior on panics
panic = "abort"
