[package]
name = "reap3r-bootstrap"
version = "0.1.0"
edition = "2021"
description = "MASSVISION Reap3r Bootstrap — self-healing agent watchdog"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
